[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://game/ui/adventure_ui.gd" id="1_script"]

[node name="AdventureUI" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="VerbBar" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="VerbContainer" type="HBoxContainer" parent="VerbBar"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="InventoryPanel" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="InventoryContainer" type="HBoxContainer" parent="InventoryPanel"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="ActionBar" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -130.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0

[node name="ActionLabel" type="Label" parent="ActionBar"]
layout_mode = 2
text = "Look at"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessagePanel" type="PanelContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="MessageLabel" type="Label" parent="MessagePanel"]
layout_mode = 2
text = "Message text here"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
